# SageThumbs-2k

./: .gitignore  AI_INTEGRATION.md  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE-MIT  README.md  build.rs  clippy.toml  deny.toml  rust-toolchain.toml  sage_sponsors.json
.github/: CONTRIBUTING.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  deny.toml  dependabot.yml
.github/workflows/: ci.yml  winget.yml
dll/: Cargo.toml  build.rs
dll/src/: lib.rs
docs/: AI_INTEGRATION.md  CHANGELOG.md  DEVELOPMENT_GOTCHAS.md  FEATURES.md  PACKAGING.md  RELEASE-SECURITY.md
examples/: cover.rs  mobidiag.rs  ocrtest.rs  previewshot.rs
locales/: ar.toml  bg.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  fa.toml  fi.toml  fil.toml  fr.toml  he.toml  hi.toml  hr.toml  hu.toml  id.toml  it.toml  ja.toml  ko.toml  ms.toml  nb.toml  nl.toml  pl.toml  pt-BR.toml  ro.toml  ru.toml  sk.toml  sl.toml  sv.toml  th.toml  tr.toml  uk.toml  vi.toml  zh-CN.toml  zh-TW.toml
packaging/: AppxManifest.xml  MAGICK.md  imagemagick-policy.xml  installer.iss  make-msix.ps1  register-dev.ps1
packaging/chocolatey/: sagethumbs2k.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
scripts/: _targetdir.ps1  build-corpus.ps1  build-release.ps1  check-consistency.ps1  check-dicom.ps1  check-installer.ps1  dev-register.ps1  gen-site.mjs  install.ps1  make-portable.ps1  make-shots.ps1  perf.ps1  preflight.ps1  regression-baseline.txt  regression.ps1  release.ps1  test.ps1  verify.ps1
scripts/vm/: README.md  autounattend-win10.xml  av-submission.md  new-win10-vm.ps1  run-win10-test.ps1  sandbox-autotest.ps1  test-sandbox.ps1
src/: app_image.rs  cli.rs  clipboard.rs  command.rs  contextmenu.rs  decode.rs  dib.rs  doctor.rs  factory.rs  formats.rs  fsutil.rs  guids.rs  i18n.rs  jpegtran.rs  lib.rs  mcp.rs  mkv.rs  mp4.rs  ocr.rs  parallel.rs  pdf.rs  previewhandler.rs  propstore.rs  register.rs  safety.rs  settings.rs  shellcmd.rs  streamsrc.rs  strip.rs  thumbprovider.rs  topdf.rs  upload_config.rs  verbs.rs  video.rs  vstream.rs
src/container/: affinity.rs  audio.rs  blend.rs  c4d.rs  cdr.rs  clip.rs  collage.rs  djvu.rs  dwg.rs  eps.rs  epub.rs  fb2.rs  gcode.rs  icns.rs  ilbm.rs  indd.rs  iw44.rs  jb2.rs  max.rs  mobi.rs  mod.rs  office.rs  ole.rs  project.rs  psd.rs  psp.rs  rar.rs  rhino.rs  select.rs  sevenz.rs  skp.rs  tarfmt.rs  util.rs  waveform.rs  xcf.rs  zipfmt.rs  zp.rs
src/decode/: magick.rs  tests.rs
src/verbs/: actions.rs  encode.rs  fileops.rs  menu.rs
tests/: com_roundtrip.rs  explorer_command.rs  packaged_load.rs  preview_handler.rs  preview_markdown_shot.rs  preview_view_source.rs  property_store.rs  settings_gate.rs
tests/fixtures/dicom/: color_stripes.dcm  make_fixtures.py  mono1_grad.dcm
tests/fixtures/sevenz/: make_fixtures.py  solid_buried.7z  solid_order.7z
